# ft-promoter-browser

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/workflows/: deploy.yml
public/data/: ft-promoter.json  ft-promoter.template.json
rust/ft-promoter-builder/: Cargo.toml
rust/ft-promoter-builder/src/: main.rs
scripts/: build-ft-promoter-dataset-rust.mjs  build-ft-promoter-dataset.mjs
src/: App.tsx  styles.css  types.ts
src/components/: AccessionTable.tsx  MotifHeatmap.tsx  PromoterTracks.tsx  SequenceAlignment.tsx  SummaryStrip.tsx
src/data/: seedDataset.ts
