[package]
name = "ft-promoter-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
flate2 = "1.1"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
